--- a/05week/travel-gram/css/style.css
+++ b/05week/travel-gram/css/style.css
@@ -13,8 +13,7 @@ body {
 }
 #gridcontainer {
   display: grid;
-  grid-template-columns: 100vh;
-  grid-template-rows: 100px repeat(10, minmax(50px, auto) );
+  grid-template-areas: 100vh / 100px repeat( auto-fit, minmax(50px, 10fr) );
   grid-template-areas:
       "box1"
       "box2"
@@ -44,7 +43,7 @@ body {
 }
 
 img {
-  width: 300px; 
+  width: 100%; 
   height: 50%;
 } 
 .box p {
