--- a/09week/customer-satisfaction/css/style.css
+++ b/09week/customer-satisfaction/css/style.css
@@ -3,6 +3,8 @@
     padding: 10px 60px;
     margin: 0 auto;
     background-color: #e6e6e6;
+    border: 1px solid #a6a6a6;
+    border-radius: 4px;
 }
 
 h1 {
@@ -17,6 +19,8 @@ form {
 input {
     margin-bottom: 10px;
     padding: 4px 0;
+    border: none;
+    border-radius: 4px;
 }
 
 .radio {
@@ -38,6 +42,11 @@ input {
     flex-direction: column;
     margin: 10px 0;
 }
+
+.recommend label {
+    margin-bottom: 10px;
+}
+
 .slider {
     margin:0;
     width: 100%;
@@ -59,5 +68,14 @@ textarea {
 }
 
 button {
-    margin-bottom: 10px;
+    width: 180px;
+    height: 50px;
+    border: none;
+    border-radius: 4px;
+    margin: 0 auto 10px;
+    background-color: #1e90ff;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 600;
+    font-size: 16pt;
+    cursor: pointer;
 }
