--- a/05week/travel-gram/css/style.css
+++ b/05week/travel-gram/css/style.css
@@ -121,6 +121,7 @@ img {
 }
 .box6 {
   grid-area: box6;
+  display: flex;
   width: 100%;
   height: 100%;
   background: #FFAFBD;  /* fallback for old browsers */
