started work, got it fleshed out

--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -1,1 +1,54 @@
+body {
+    background-color: beige;
+    font-family: Source Sans Pro, sans-serif;
+}
 
+.container {
+    width: 600px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#pepper {
+    animation: wiggle 2500ms ease-in-out;
+    animation-iteration-count: infinite;
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+
+#scovilles {
+    height: 50px;
+    width: 240px;
+    border: 2px solid red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 22pt;
+}
+
+label {
+    font-size: 10pt;
+
+}
+
+.button, .unlock {
+    text-align: center;
+    height: 20px;
+    width: 320px;
+    border: 1px solid red;
+    border-radius: 4px;
+    margin-top: 10px;
+    cursor: pointer;
+}
+
+.button:hover, .unlock:hover {
+    box-shadow: 0 0 10px black;
+}
+
+@keyframes wiggle {
+    0% {transform: rotate(-10deg);}
+    50% {transform: rotate(10deg);}
+    100% {transform: rotate(-10deg);}
+  }
