--- a/05week/travel-gram/css/style.css
+++ b/05week/travel-gram/css/style.css
@@ -13,7 +13,7 @@ body {
 }
 #gridcontainer {
   display: grid;
-  grid-template-areas: 100vh / 100px repeat( auto-fit, minmax(50px, 10fr) );
+  grid: 100vh / 100px repeat( auto-fit, minmax(50px, 10fr) );
   grid-template-areas:
       "box1"
       "box2"
