--- a/05week/grid-landing-page/css/style.css
+++ b/05week/grid-landing-page/css/style.css
@@ -43,7 +43,6 @@ body {
 .g1-n1-b1 {
   grid-column: 2;
   grid-row: 2;
-  background: green;
   border-left: 1px solid gray;
 }
 .fa-circle {
@@ -53,7 +52,6 @@ body {
 .g1-n1-b2 {
   grid-column: 3;
   grid-row: 2;
-  background: red;
 }
 .n1-b2 {
   position: relative;
@@ -62,7 +60,6 @@ body {
 .g1-n1-b3 {
   grid-column: 5;
   grid-row: 2;
-  background: orange;
 }
 .n1-b3 {
   position: relative;
@@ -71,8 +68,150 @@ body {
 .g1-n1-b4 {
   grid-column: 7;
   grid-row: 2;
-  background: yellow;
 }
+.n1-b4 {
+  position: relative;
+  top: 25;
+}
+.g1-n1-b5 {
+  grid-column: 9;
+  grid-row: 2;
+}
+.fa-bars {
+  position: relative;
+  top: 50;
+}
+.fa-search {
+  float: right;
+  position: relative;
+  top: 50;
+}
+.g1-n1-b6 {
+  grid-column: 3/ span 2;
+  grid-row: 3;
+}
+.n1-b6 {
+  font-size: 48px;
+  letter-spacing: 6px;
+  color: rgba(128, 128, 128, 0.26);
+}
+.g1-n1-line1 {
+  grid-column: 2;
+  grid-row: 1 / span 3;
+  border-left: 2px solid rgba(128, 128, 128, 0.548);
+}
+.g1-n1-line2 {
+  grid-column: 3;
+  grid-row: 1 / span 3;
+  border-left: 2px solid rgba(128, 128, 128, 0.575);
+}
+.g1-n1-line3 {
+  grid-column: 4;
+  grid-row: 1 / span 3;
+  border-left: 2px solid rgba(128, 128, 128, 0.582);
+}
+.g1-n1-line4 {
+  grid-column: 5;
+  grid-row: 1 / span 3;
+  border-left: 2px solid rgba(128, 128, 128, 0.582);
+}
+.g1-n1-line5 {
+  grid-column: 6;
+  grid-row: 1 / span 3;
+  border-left: 2px solid rgba(128, 128, 128, 0.582);
+}
+.g1-n1-line6 {
+  grid-column: 7;
+  grid-row: 1 / span 3;
+  border-left: 2px solid rgba(128, 128, 128, 0.582);
+}
+.g1-n1-line7 {
+  grid-column: 8;
+  grid-row: 1 / span 3;
+  border-left: 2px solid rgba(128, 128, 128, 0.582);
+}
+.g1-n1-line8 {
+  grid-column: 9;
+  grid-row: 1 / span 3;
+  border-left: 2px solid rgba(128, 128, 128, 0.582);
+}
+.g1-n1-line9 {
+  grid-column: 10;
+  grid-row: 1 / span 3;
+  border-left: 2px solid rgba(128, 128, 128, 0.582);
+}
+.box2 {
+  display: grid;
+  grid-area: box2;
+  grid-column: 1 / -1;
+  grid-row: 3 / 8;
+}
+#box2-grid {
+  display: grid;
+  grid-template-rows: repeat(6, 1fr);
+  grid-template-columns: repeat(10, 1fr);
+
+}
+.g1-n2-b1 {
+  grid-column: 1;
+  grid-row: 1 / -1;
+  background: red;
+}
+img.n2-b1 {
+  width: 100%;
+  height: 100%;
+}
+.g1-n2-b2 {
+  grid-column: 7 / -1;
+  grid-row: 3 / -1;
+  background: blue;
+}
+img.n2-b2 {
+  width: 100%;
+  height: 100%;
+}
+.g1-n2-b3 {
+  grid-column: 3 / 8;
+  grid-row: 3 / span 3;
+}
+p.n2-b3 {
+  font-size: 180px;
+  letter-spacing: 10px;
+}
+.g1-n2-b4 {
+  grid-column: 3 / span 2;
+  grid-row: 5 / span 2;
+}
+p.n2-b4 {
+  margin-top: 50px;
+  margin-left: 9px;
+}
+.g1-n2-b5 {
+  grid-column: 4 / 8;
+  grid-row: 5 / span 2;
+  /* background: green; */
+
+}
+hr {
+  height: 20px;
+  background: black;
+  border: none;
+  margin-left: 100px;
+  margin-top: 45px;
+}
+.g1-n2-b6 {
+  grid-column: 9 / span 2;
+  grid-row: 1;
+  display: flex;
+  justify-content: center;
+
+}
+p.n2-b6 {
+  transform: rotate(270deg);
+  margin-left: 50px;
+  
+}
+
 
 /* .box2 {
   display: grid;
