--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -38,42 +38,34 @@ p {
 }
 
 .upgrades {
-    width: 600px;
+    width: 700px;
     display: flex;
     justify-content: space-between;
+}
+.upgrades div {
+    width: 350px;
 }
 
 label {
     font-size: 10pt;
+    text-align: center;
 }
 
-.button, .unlock {
-    text-align: center;
-    height: 20px;
+.button, .unlock, #research {
+    height: 30px;
     width: 320px;
-    border: 1px solid red;
-    border-radius: 4px;
+    background-color: #e6e6e6;
+    border: 3px groove rgba(190,0,0,0.44);
+    border-radius: 14px;
+    border-radius: 14px;
     margin-top: 10px;
     cursor: pointer;
 }
 
-.button:hover, .unlock:hover {
-    box-shadow: 0 0 10px black;
-}
-
 .researchDiv {
-    height: 100px;
-    padding: 10px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     align-items: center;
-}
-
-.researchDiv button {
-    height: 20px;
-    width: 220px;
-    padding: 0 10px;
 }
 
 @keyframes wiggle {
