--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -11,13 +11,17 @@ body {
     align-items: center;
 }
 h1 {
-    margin: 0;
+    font-size: 30pt;
+    margin: 5px 0;    
+}
+h1 span{
+    color: #A00203;
 }
 
 p {
-    font-size: 14pt;
+    font-size: 18pt;
     font-weight: 600;
-    margin: 0;
+    margin: 0 0 10px;
 }
 
 #pepper {
@@ -47,7 +51,7 @@ p {
 }
 
 label {
-    font-size: 10pt;
+    font-size: 12pt;
     text-align: center;
 }
 
@@ -59,7 +63,12 @@ label {
     border-radius: 14px;
     border-radius: 14px;
     margin-top: 10px;
+    font-size: 12pt;
     cursor: pointer;
+}
+
+button:focus {
+    outline: 0;
 }
 
 .researchDiv {
