did a little more styling

--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -1,6 +1,7 @@
 body {
     background-color: beige;
     font-family: Source Sans Pro, sans-serif;
+    background: url(/img/depositphotos_178685184-stock-photo-pepper-background-different-types-of.jpg);
 }
 
 .container {
@@ -12,8 +13,14 @@ body {
 }
 h1 {
     font-size: 30pt;
-    margin: 5px 0;    
+    margin: 5px 0;
+    padding: 2px 8px;
+    border: 2px solid black;
+    box-shadow: 0 0 2px black;
+    border-radius: 12px;
+    background-color: #e6e6e6;
 }
+
 h1 span{
     color: #A00203;
 }
@@ -22,6 +29,11 @@ p {
     font-size: 18pt;
     font-weight: 600;
     margin: 0 0 10px;
+    background-color: #e6e6e6;
+    padding: 5px;
+    border: 2px solid black;
+    box-shadow: 0 0 2px black;
+    border-radius: 10px;
 }
 
 #pepper {
@@ -33,18 +45,25 @@ p {
 
 #scovilles {
     height: 50px;
-    width: 240px;
-    border: 2px solid red;
+    width: 280px;
+    background-color: #e6e6e6;
+    border: 4px groove red;
+    border-radius: 12px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 22pt;
+    margin: 5px 0;
 }
 
 .upgrades {
     width: 700px;
     display: flex;
     justify-content: space-between;
+    padding: 5px 5px 10px 12px;
+    background-color: #e6e6e6;
+    border: 2px solid black;
+    border-radius: 12px;
 }
 .upgrades div {
     width: 350px;
@@ -58,7 +77,8 @@ label {
 .button, .unlock, #research {
     height: 30px;
     width: 320px;
-    background-color: #e6e6e6;
+    background-color: #A00203;
+    color: #e6e6e6;
     border: 3px groove rgba(190,0,0,0.44);
     border-radius: 14px;
     border-radius: 14px;
