--- a/05week/grid-landing-page/css/style.css
+++ b/05week/grid-landing-page/css/style.css
@@ -14,10 +14,10 @@ body {
   display: grid;
   grid-template-rows: 100px repeat(8, minmax(20px, 1fr) ) 100px;
   grid-template-columns: repeat(20, auto-fit mixmax(20px, 1fr) );
-  grid-gap: 5px;
   width: 100%;
   height: 100%;
   border: 2px solid black;
+  grid-gap: 5px;
   /* grid-template-areas:  */
    
 
@@ -189,8 +189,6 @@ p.n2-b4 {
 .g1-n2-b5 {
   grid-column: 4 / 8;
   grid-row: 5 / span 2;
-  /* background: green; */
-
 }
 hr {
   height: 20px;
@@ -211,8 +209,71 @@ p.n2-b6 {
   margin-left: 50px;
   
 }
-
-
+.g1-n2-b7 {
+  grid-column: 8;
+  grid-row: 2;
+}
+p.n2-b7 {
+  font-weight: 700;
+  letter-spacing: 2px;
+  position: relative;
+  top: 55;
+}
+.g1-n2-line1 {
+  grid-column: 2;
+  grid-row: 1 / span 6;
+  border-left: 2px solid rgba(128, 128, 128, 0.582);
+}
+.g1-n2-line2 {
+  grid-column: 3;
+  grid-row: 1 / span 6;
+  border-left: 2px solid rgba(128, 128, 128, 0.582);
+}
+.g1-n2-line3 {
+  grid-column: 4;
+  grid-row: 1 / span 6;
+  border-left: 2px solid rgba(128, 128, 128, 0.582);
+}
+.g1-n2-line4 {
+  grid-column: 5;
+  grid-row: 1 / span 6;
+  border-left: 2px solid rgba(128, 128, 128, 0.582);
+}
+.g1-n2-line5 {
+  grid-column: 6;
+  grid-row: 1 / span 6;
+  border-left: 2px solid rgba(128, 128, 128, 0.582);
+}
+.g1-n2-line6 {
+  grid-column: 7;
+  grid-row: 1 / span 6;
+  border-left: 2px solid rgba(128, 128, 128, 0.582);
+}
+.g1-n2-line7 {
+  grid-column: 8;
+  grid-row: 1 / span 6;
+  border-left: 2px solid rgba(128, 128, 128, 0.582);
+}
+.g1-n2-line8 {
+  grid-column: 9;
+  grid-row: 1 / span 6;
+  border-left: 2px solid rgba(128, 128, 128, 0.582);
+}
+.g1-n2-line9 {
+  grid-column: 10;
+  grid-row: 1 / span 6;
+  border-left: 2px solid rgba(128, 128, 128, 0.582);
+}
+#box3-grid {
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  grid-template-columns: repeat(10, 1fr);
+}
+.g1-n3-b1 {
+  grid-column: 2;
+  grid-row: 3;
+  background: red;
+}
 /* .box2 {
   display: grid;
   grid-area: box2;
