--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -1,1 +1,50 @@
 
+body {
+    background: url("https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/BhBjRHe1Mj9qufshq/videoblocks-video-4k-animation-shinny-blue-stars-slowly-movement-in-black-galaxy-space-background-at-night_rlkmgjykg_thumbnail-full01.png");
+    padding-top: 30px;
+    font-family: Monospace;
+    background-color: black;
+    width: 600px;
+    margin: auto;
+    text-align: center;
+}                                           
+
+p {
+    font-size: 20px;
+    color: white;
+    display: block;
+    margin: 5px;
+}
+
+
+#counter {
+    margin: auto;
+    text-align:center;
+    padding-top: 20px;
+    margin-bottom: 20px;
+    font-size: 30px;
+    border:1px solid;
+    background-color:white;
+    width:200px;
+    height:55px;    
+}
+
+#upgradeLevel {
+    margin: auto;
+    text-align:center;
+    padding-top: 20px;
+    margin-bottom: 20px;
+    font-size: 30px;
+    border:1px solid;
+    background-color:magenta;
+    width:300px;
+    height:50px;    
+}
+
+.buttons {
+  border:1px solid;
+  color:white;
+  font-size:20px;
+  padding:10px;
+}
+
