--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -7,13 +7,15 @@ body {
     width: 600px;
     margin: auto;
     text-align: center;
+    color: white;
 }                                           
 
 p {
     font-size: 20px;
     color: white;
     display: block;
-    margin: 5px;
+    margin: 10px;
+    
 }
 
 
@@ -24,9 +26,10 @@ p {
     margin-bottom: 20px;
     font-size: 30px;
     border:1px solid;
-    background-color:white;
+    border-radius: 20px;
+    background-color:mediumslateblue;
     width:200px;
-    height:55px;    
+    height:50px;    
 }
 
 #upgradeLevel {
@@ -36,6 +39,7 @@ p {
     margin-bottom: 20px;
     font-size: 30px;
     border:1px solid;
+    border-radius: 20px;
     background-color:magenta;
     width:300px;
     height:50px;    
