--- a/05week/grid-landing-page/css/style.css
+++ b/05week/grid-landing-page/css/style.css
@@ -266,87 +266,90 @@ p.n2-b7 {
 }
 #box3-grid {
   display: grid;
-  grid-template-rows: repeat(4, 1fr);
   grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: repeat(4 minmax(100px, 1fr) );
 }
 .g1-n3-b1 {
   grid-column: 2;
-  grid-row: 3;
-  background: red;
+  grid-row: 4;
+  height: 280px;
+  border-left: 1px solid rgba(128, 128, 128, 0.493);
+
+  
 }
-/* .box2 {
-  display: grid;
-  grid-area: box2;
+p.n3-b1 {
+  font-weight: 700;
+  letter-spacing: 2px;
+  position: relative;
+  top: 200;
 }
-.box3 {
-  display: grid;
-  grid-area: box3;
+.g1-n3-b2 {
+  grid-column: 3;
+  grid-row: 4;
+  height: 280px;
+  border-left: 1px solid rgba(128, 128, 128, 0.493);
+  
 }
-.box4 {
-  display: grid;
-  grid-area: box4;
+.circle1 {
+  float: left;
+  height: 20px;
 }
-.box5 {
-  display: grid;
-  grid-area: box5;
+i.fa-arrow-alt-circle-left {
+  position: relative;
+  top: 180;
 }
-.box6 {
-  display: grid;
-  grid-area: box6;
+.circle2 {
+  float: right;
 }
-.box7 {
-  display: grid;
-  grid-area: box7;
+i.fa-arrow-alt-circle-right {
+  position: relative;
+  top: 180;
 }
-.box8 {
-  display: grid;
-  grid-area: box8;
+.g1-n3-b3 {
+  grid-column: 4;
+  grid-row: 4;
+  height: 280px;
+  border-left: 1px solid rgba(128, 128, 128, 0.493);
+  
 }
-.box9 {
-  display: grid;
-  grid-area: box9;
+.g1-n3-b4 {
+  grid-column: 5 / span 2;
+  grid-row: 4;
+  height: 280px;
+  border-left: 1px solid rgba(128, 128, 128, 0.493);
+  
 }
-.box10 {
-  display: grid;
-  grid-area: box10;
+.g1-n3-b5 {
+  grid-column: 6 / span 2;
+  grid-row: 4;
+  height: 280px;
+  border-right: 1px solid rgba(128, 128, 128, 0.493); 
 }
-.box11 {
-  display: grid;
-  grid-area: box11;
+hr.n3-b5 {
+  height: 5px;
+  position: relative;
+  top: 10;
 }
-.box12 {
-  display: grid;
-  grid-area: box12;
+.g1-n3-b6 {
+  grid-column: 8 / span 2;
+  grid-row: 4;
+  height: 280px;
+  border-right: 1px solid rgba(128, 128, 128, 0.493); 
 }
-.box13 {
-  display: grid;
-  grid-area: box13;
+p.n3-b6-1 {
+  font-size: 100px;
+  letter-spacing: 5px;
+  margin-bottom: 10px;
+  margin-top: 30px;
 }
-.box14 {
-  display: grid;
-  grid-area: box14;
+span {
+  font-weight: 700;
+  font-size: 20px;
 }
-.box15 {
-  display: grid;
-  grid-area: box15;
+.g1-n3-b7 {
+  grid-column: 9;
+  grid-row: 4;
+  height: 280px;
+  border-right: 1px solid rgba(128, 128, 128, 0.493); 
+  border-left: 1px solid rgba(128, 128, 128, 0.493); 
 }
-.box16 {
-  display: grid;
-  grid-area: box16;
-}
-.box17 {
-  display: grid;
-  grid-area: box17;
-}
-.box18 {
-  display: grid;
-  grid-area: box18;
-}
-.box19 {
-  display: grid;
-  grid-area: box19;
-}
-.box20 {
-  display: grid;
-  grid-area: box20;
-} */
