--- a/05week/grid-landing-page/css/style.css
+++ b/05week/grid-landing-page/css/style.css
@@ -12,7 +12,7 @@ body {
 }
 #gridwrapper {
   display: grid;
-  grid-template-rows: 100px repeat(8, minmax(20px, 1fr) ) 100px;
+  grid-template-rows: 20px repeat(8, minmax(20px, 1fr) ) 100px;
   grid-template-columns: repeat(20, auto-fit mixmax(20px, 1fr) );
   width: 100%;
   height: 100%;
@@ -22,12 +22,12 @@ body {
    
 
 }
-.box {
+/* .box {
   background: palegreen;
 }
 .box:nth-child(even) {
   background: palevioletred;
-}
+} */
 .box1 {
   display: grid;
   grid-area: box1;
@@ -47,7 +47,7 @@ body {
 }
 .fa-circle {
   position: relative;
-  top: 50;
+  top: 20;
 }
 .g1-n1-b2 {
   grid-column: 3;
@@ -55,7 +55,7 @@ body {
 }
 .n1-b2 {
   position: relative;
-  top: 25;
+  top: 2;
 }
 .g1-n1-b3 {
   grid-column: 5;
@@ -63,7 +63,7 @@ body {
 }
 .n1-b3 {
   position: relative;
-  top: 25;
+  top: 2;
 }
 .g1-n1-b4 {
   grid-column: 7;
@@ -71,7 +71,7 @@ body {
 }
 .n1-b4 {
   position: relative;
-  top: 25;
+  top: 2;
 }
 .g1-n1-b5 {
   grid-column: 9;
@@ -79,12 +79,12 @@ body {
 }
 .fa-bars {
   position: relative;
-  top: 50;
+  top: 5;
 }
 .fa-search {
   float: right;
   position: relative;
-  top: 50;
+  top: 5;
 }
 .g1-n1-b6 {
   grid-column: 3/ span 2;
@@ -98,47 +98,47 @@ body {
 .g1-n1-line1 {
   grid-column: 2;
   grid-row: 1 / span 3;
-  border-left: 2px solid rgba(128, 128, 128, 0.548);
+  border-left: 1px solid rgba(128, 128, 128, 0.548);
 }
 .g1-n1-line2 {
   grid-column: 3;
   grid-row: 1 / span 3;
-  border-left: 2px solid rgba(128, 128, 128, 0.575);
+  border-left: 1px solid rgba(128, 128, 128, 0.575);
 }
 .g1-n1-line3 {
   grid-column: 4;
   grid-row: 1 / span 3;
-  border-left: 2px solid rgba(128, 128, 128, 0.582);
+  border-left: 1px solid rgba(128, 128, 128, 0.582);
 }
 .g1-n1-line4 {
   grid-column: 5;
   grid-row: 1 / span 3;
-  border-left: 2px solid rgba(128, 128, 128, 0.582);
+  border-left: 1px solid rgba(128, 128, 128, 0.582);
 }
 .g1-n1-line5 {
   grid-column: 6;
   grid-row: 1 / span 3;
-  border-left: 2px solid rgba(128, 128, 128, 0.582);
+  border-left: 1px solid rgba(128, 128, 128, 0.582);
 }
 .g1-n1-line6 {
   grid-column: 7;
   grid-row: 1 / span 3;
-  border-left: 2px solid rgba(128, 128, 128, 0.582);
+  border-left: 1px solid rgba(128, 128, 128, 0.582);
 }
 .g1-n1-line7 {
   grid-column: 8;
   grid-row: 1 / span 3;
-  border-left: 2px solid rgba(128, 128, 128, 0.582);
+  border-left: 1px solid rgba(128, 128, 128, 0.582);
 }
 .g1-n1-line8 {
   grid-column: 9;
   grid-row: 1 / span 3;
-  border-left: 2px solid rgba(128, 128, 128, 0.582);
+  border-left: 1px solid rgba(128, 128, 128, 0.582);
 }
 .g1-n1-line9 {
   grid-column: 10;
   grid-row: 1 / span 3;
-  border-left: 2px solid rgba(128, 128, 128, 0.582);
+  border-left: 1px solid rgba(128, 128, 128, 0.582);
 }
 .box2 {
   display: grid;
@@ -222,47 +222,47 @@ p.n2-b7 {
 .g1-n2-line1 {
   grid-column: 2;
   grid-row: 1 / span 6;
-  border-left: 2px solid rgba(128, 128, 128, 0.582);
+  border-left: 1px solid rgba(128, 128, 128, 0.582);
 }
 .g1-n2-line2 {
   grid-column: 3;
   grid-row: 1 / span 6;
-  border-left: 2px solid rgba(128, 128, 128, 0.582);
+  border-left: 1px solid rgba(128, 128, 128, 0.582);
 }
 .g1-n2-line3 {
   grid-column: 4;
   grid-row: 1 / span 6;
-  border-left: 2px solid rgba(128, 128, 128, 0.582);
+  border-left: 1px solid rgba(128, 128, 128, 0.582);
 }
 .g1-n2-line4 {
   grid-column: 5;
   grid-row: 1 / span 6;
-  border-left: 2px solid rgba(128, 128, 128, 0.582);
+  border-left: 1px solid rgba(128, 128, 128, 0.582);
 }
 .g1-n2-line5 {
   grid-column: 6;
   grid-row: 1 / span 6;
-  border-left: 2px solid rgba(128, 128, 128, 0.582);
+  border-left: 1px solid rgba(128, 128, 128, 0.582);
 }
 .g1-n2-line6 {
   grid-column: 7;
   grid-row: 1 / span 6;
-  border-left: 2px solid rgba(128, 128, 128, 0.582);
+  border-left: 1px solid rgba(128, 128, 128, 0.582);
 }
 .g1-n2-line7 {
   grid-column: 8;
   grid-row: 1 / span 6;
-  border-left: 2px solid rgba(128, 128, 128, 0.582);
+  border-left: 1px solid rgba(128, 128, 128, 0.582);
 }
 .g1-n2-line8 {
   grid-column: 9;
   grid-row: 1 / span 6;
-  border-left: 2px solid rgba(128, 128, 128, 0.582);
+  border-left: 1px solid rgba(128, 128, 128, 0.582);
 }
 .g1-n2-line9 {
   grid-column: 10;
   grid-row: 1 / span 6;
-  border-left: 2px solid rgba(128, 128, 128, 0.582);
+  border-left: 1px solid rgba(128, 128, 128, 0.582);
 }
 #box3-grid {
   display: grid;
@@ -272,7 +272,7 @@ p.n2-b7 {
 .g1-n3-b1 {
   grid-column: 2;
   grid-row: 4;
-  height: 280px;
+  height: 290px;
   border-left: 1px solid rgba(128, 128, 128, 0.493);
 
   
@@ -286,7 +286,7 @@ p.n3-b1 {
 .g1-n3-b2 {
   grid-column: 3;
   grid-row: 4;
-  height: 280px;
+  height: 290px;
   border-left: 1px solid rgba(128, 128, 128, 0.493);
   
 }
@@ -308,21 +308,21 @@ i.fa-arrow-alt-circle-right {
 .g1-n3-b3 {
   grid-column: 4;
   grid-row: 4;
-  height: 280px;
+  height: 290px;
   border-left: 1px solid rgba(128, 128, 128, 0.493);
   
 }
 .g1-n3-b4 {
   grid-column: 5 / span 2;
   grid-row: 4;
-  height: 280px;
+  height: 290px;
   border-left: 1px solid rgba(128, 128, 128, 0.493);
   
 }
 .g1-n3-b5 {
   grid-column: 6 / span 2;
   grid-row: 4;
-  height: 280px;
+  height: 290px;
   border-right: 1px solid rgba(128, 128, 128, 0.493); 
 }
 hr.n3-b5 {
@@ -333,7 +333,7 @@ hr.n3-b5 {
 .g1-n3-b6 {
   grid-column: 8 / span 2;
   grid-row: 4;
-  height: 280px;
+  height: 290px;
   border-right: 1px solid rgba(128, 128, 128, 0.493); 
 }
 p.n3-b6-1 {
@@ -342,14 +342,19 @@ p.n3-b6-1 {
   margin-bottom: 10px;
   margin-top: 30px;
 }
+p.n3-b6-2 {
+  color: grey;
+}
+
 span {
   font-weight: 700;
   font-size: 20px;
+  color: black;
 }
 .g1-n3-b7 {
   grid-column: 9;
   grid-row: 4;
-  height: 280px;
+  height: 290px;
   border-right: 1px solid rgba(128, 128, 128, 0.493); 
   border-left: 1px solid rgba(128, 128, 128, 0.493); 
 }
