Checkpoint 3.  In Rregular JS not jQuery, easier for me to understand for now

--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -1,1 +1,49 @@
+#click_area{
+    width: 100%;
+}
+body {
+    background-image: url("http://holidayspiritfestival.com/images/arg-snowing-background-full.gif?crc=4223333079");
+    color: white;
+}
 
+.container {
+    text-align: center;
+}
+
+h1 {
+    font-size: 64px;
+}
+
+p {
+    font-size: 32px;
+}
+
+h3 {
+    font-size: 26px;
+}
+
+table {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+td {
+    font-size: 24px;
+    color: red;
+    font-weight: bold;
+    padding: 15px;
+    border-top: 5px solid red;
+}
+
+button {
+    font-size: 18px;
+    background-color: green;
+    padding: 10px;
+}
+
+img {
+    transition: all .2s ease-in-out;
+}
+img:hover {
+    transform: scale(1.25);
+}
