--- a/05week/travel-gram/css/style.css
+++ b/05week/travel-gram/css/style.css
@@ -13,7 +13,7 @@ body {
 }
 #gridcontainer {
   display: grid;
-  grid: 100vh / 100px repeat( auto-fit, minmax(50px, 10fr) );
+  grid-template-columns: 1fr;
   grid-template-areas:
       "box1"
       "box2"
@@ -23,7 +23,7 @@ body {
       "box6"
       "box7"
       "box8"
-      "box8"
+      "box9"
       "box10"
       "box11" ;
   
