commented js and did a few minor tweaks

--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -25,6 +25,12 @@ h1 span{
     color: #A00203;
 }
 
+#totalLabel {
+    background-color: #e6e6e6;
+    border: 2px solid black;
+    padding: 2px 5px;
+}
+
 p {
     font-size: 18pt;
     font-weight: 600;
