--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -4,46 +4,98 @@
 body {
     background-image: url("http://holidayspiritfestival.com/images/arg-snowing-background-full.gif?crc=4223333079");
     color: white;
+    font-family: 'Mountains of Christmas', cursive;
 }
 
 .container {
     text-align: center;
 }
 
+
 h1 {
-    font-size: 64px;
+    font-size: 80px;
+    padding: 0px;
 }
 
-p {
-    font-size: 32px;
+ul {
+    list-style-type: none;
+    float: right;
+}
+li {
+    font-size: 24px;
+    display: inline;
+    margin-right: 100px;
 }
 
 h3 {
-    font-size: 26px;
+    font-size: 40px;
+    text-align: center;
 }
 
 table {
     margin-left: auto;
     margin-right: auto;
+    border: none;
+    width: 90%;
+    border-collapse: collapse;
+    border: 10px outset #ff142f;
 }
+
+tr {
+    background: darkgreen;
+    opacity: 0.7;
+}
+
 
 td {
     font-size: 24px;
-    color: red;
+    color: white;
     font-weight: bold;
     padding: 15px;
-    border-top: 5px solid red;
+    border-top: 10px inset #ff142f;
+    border-bottom: 10px inset #ff142f;
+    
+
 }
 
 button {
+    color: white;
     font-size: 18px;
-    background-color: green;
+    background-color: #ff142f;
     padding: 10px;
+    border: 4px outset white;
+    opacity: 0.8;
+    transition: 0.3s;
+    border-radius: 75px;
+    margin-right: 50px; 
+    font-family: 'Mountains of Christmas', cursive;
+    font-weight: bold;
+
+
+}
+
+button:hover {
+    opacity: 1;
+    transform: scale(1.3);
+    cursor: pointer;
 }
 
 img {
     transition: all .2s ease-in-out;
+    opacity: 0.6;
 }
 img:hover {
-    transform: scale(1.25);
+    transform: scale(1.5);
+    opacity: 1;
+    cursor: pointer;
+}
+
+.items{
+    transition: .2s ease-in;
+    text-align: center;
+}
+
+.items:hover{
+    opacity: 1;
+
 }
