--- a/checkpoint-three/css/styles.css
+++ b/checkpoint-three/css/styles.css
@@ -1,27 +1,40 @@
 html{
     font-family: 'Staatliches', cursive;
 }
+#wrapper{
+    width: 500px;
+    height: 500px;
+    border: 1px black solid;
+    margin: 10px;
+}
 #symbol{
-    max-height: 250px;
+    max-width: 250px;
+    margin: 100px;
 }
-h1{
 
-}
+
 .btn{
     background-color: crimson;
     color: white;
     border-radius: 5px;
-    margin: 5px;
+    margin: 10px;
+    padding: 5px;
 }
 .display{
     background-color: black;
     color: white;
     border-radius: 5px;
-    margin: 5px;
+    margin: 10px;
+    padding: 5px;
+}
+
+.characters{
+    max-height: 50px;
+    position: fixed;
 }
 
 
-@keyframes shake {
+/* @keyframes shake {
     0% { transform: translate(1px, 1px) rotate(0deg); }
     10% { transform: translate(-1px, -2px) rotate(-1deg); }
     20% { transform: translate(-3px, 0px) rotate(1deg); }
@@ -33,4 +46,4 @@ h1{
     80% { transform: translate(-1px, -1px) rotate(1deg); }
     90% { transform: translate(1px, 2px) rotate(0deg); }
     100% { transform: translate(1px, -2px) rotate(-1deg); }
-  }
+  } */
