--- a/checkpoint-three/css/styles.css
+++ b/checkpoint-three/css/styles.css
@@ -1,6 +1,12 @@
 html{
     font-family: 'Staatliches', cursive;
 }
+
+#holder{
+    display: inline-flex;
+    flex-direction: row;
+    margin-right: 50px;
+}
 #wrapper{
     width: 500px;
     height: 500px;
@@ -12,25 +18,50 @@ html{
     margin: 100px;
 }
 
-
 .btn{
+    display: inline-flex;
+    justify-content: center;
     background-color: crimson;
     color: white;
+    width: 200px;
     border-radius: 5px;
-    margin: 10px;
+    margin: 5px;
     padding: 5px;
+}
+
+.counter{
+    width: 50px;
+}
+
+.cost{
+    width: 30px;
+}
+
+.label{
+    background-color: black;
 }
 .display{
     background-color: black;
     color: white;
     border-radius: 5px;
-    margin: 10px;
+    margin-top: 10px;
     padding: 5px;
 }
 
 .characters{
     max-height: 50px;
     position: fixed;
+    top: 300px;
+    
+}
+.hand{
+    max-height: 250px;
+}
+
+#timer{
+    font-size: 40pt;
+    margin: 50px;
+    margin-left: 100px;
 }
 
 
