I couldnt get those boxes to work so i made new boxes lol

--- a/05week/grid-landing-page/css/style.css
+++ b/05week/grid-landing-page/css/style.css
@@ -12,7 +12,7 @@ body {
 }
 #gridwrapper {
   display: grid;
-  grid-template-rows: 20px repeat(8, minmax(20px, 1fr) ) 100px;
+  grid-template-rows: 20px repeat(8, minmax(20px, 1fr) ) 1fr;
   grid-template-columns: repeat(20, auto-fit, mixmax(20px, 1fr) );
   /* grid-template-columns: repeat(auto-fit, mixmax(20px, 1fr) ); */
   width: 100%;
@@ -273,7 +273,7 @@ p.n2-b7 {
 .g1-n3-b1 {
   grid-column: 2;
   grid-row: 4;
-  height: 290px;
+  /* height: 290px; */
   border-left: 1px solid rgba(128, 128, 128, 0.493);
 
   
@@ -287,7 +287,7 @@ p.n3-b1 {
 .g1-n3-b2 {
   grid-column: 3;
   grid-row: 4;
-  height: 290px;
+  /* height: 290px; */
   border-left: 1px solid rgba(128, 128, 128, 0.493);
   
 }
@@ -309,7 +309,7 @@ i.fa-arrow-alt-circle-right {
 .g1-n3-b3 {
   grid-column: 4;
   grid-row: 4;
-  height: 290px;
+  /* height: 290px; */
   border-left: 1px solid rgba(128, 128, 128, 0.493);
   
 }
@@ -323,7 +323,7 @@ i.fa-arrow-alt-circle-right {
 .g1-n3-b5 {
   grid-column: 6 / span 2;
   grid-row: 4;
-  height: 290px;
+  /* height: 290px; */
   border-right: 1px solid rgba(128, 128, 128, 0.493); 
 }
 hr.n3-b5 {
