--- a/checkpoint-three/css/styles.css
+++ b/checkpoint-three/css/styles.css
@@ -63,6 +63,11 @@ html{
     margin: 50px;
     margin-left: 100px;
 }
+.win_loose{
+    max-height: 250px;
+    background-color: black;
+    position: fixed;
+}
 
 
 /* @keyframes shake {
