--- a/checkpoint-three/css/style.css
+++ b/checkpoint-three/css/style.css
@@ -1,1 +1,81 @@
+h1 {
+  text-align: center;  
+  color: white;
+}
+
+body {
+  background-color: black;
+}
+
+h1 {
+
+}
+
+.container {
+  /* max-width: 500px; */
+  width: fit-content; 
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  height: 500px; 
+  position: relative;   
+}
+
+main {
+  border: 1px white;
+  display: flex; 
+  flex-direction: row-reverse; 
+  margin: 0 auto; 
+  height: 400px; 
+}
+
+#rpm {
+  width: 300px;
+  height: 100px; 
+  border: 3px solid white;
+  position: absolute; 
+  right: 0px; 
+  bottom: 0px; 
+  color: white;
+}
+#hypnoPoints {
+  border: 1px solid white;
+    width: 300px;
+    height: 55px;
+    color: white;
+}
+
+#wheel {
+    width:300px;
+    height:300px;
+    background-color: white;
+    border-radius:150px;
+    transform: rotate();
+  }
+  
+  #currentTotal {
+    width:300px;
+    height:52px;
+    border:1px solid white;
+    text-align: center;
+    color: white;
+    font-size: 48px;
+  }
+  
+  .button {
+    width:300px;
+    height:55px;
+    border:1px solid white;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    cursor:pointer;
+  }
+
+  #buttoncontainer {
+    vertical-align: text-top;
+    color: white;
+  }
 
